--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.17.3
+  firebase_core: ^2.31.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
