--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,19 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  fpdart: ^1.1.0
+  freezed_annotation: ^2.4.1
+  get_it: ^7.7.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
