--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   get_it: ^7.7.0
   json_annotation: ^4.9.0
+  supabase_flutter: ^2.5.2
 
 dev_dependencies:
   flutter_test:
