--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,14 @@ dependencies:
   flutter_hooks: ^0.20.5
   flutter_localizations:
     sdk: flutter
+  flutter_slidable: ^3.1.0
   flutter_svg: ^2.0.10+1
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
   get_it: ^7.7.0
+  hydrated_bloc: ^9.1.5
   json_annotation: ^4.9.0
+  path_provider: ^2.1.3
   supabase_flutter: ^2.5.2
 
 dev_dependencies:
