--- a/build.yaml
+++ b/build.yaml
@@ -4,3 +4,15 @@ targets:
       json_serializable:
         options:
           explicit_to_json: true
+          
+# targets:
+#   $default:
+#     builders:
+#       json_serializable:
+#         enabled: true
+#         generate_for:
+#           - lib/domain/*.dart
+#         include:
+#             - lib/domain/*.dart
+#         exclude:
+#             - lib/domain/some_file_to_exclude.dart
